reflectapi-demo/tests/errors/invalid_reflect_field_type_function.rs
#[derive(reflectapi::Input)]
struct MyStruct {
    field: fn(&str) -> i32,
}

fn main() {}
